--- a/templates/student/batch/my_batches.html
+++ b/templates/student/batch/my_batches.html
@@ -144,13 +144,7 @@ Dashboard | My Courses
                             Enroll Now
                         </button>
 
-                        <p class="text-success mt-2">Required:</p>
-                        <ul>
-                            {% for field in batch.required_fields %}
-                            <li>{{ field }}</li>
-                            {% endfor %}
-                        </ul>
-
+                        <p class="text-success mt-2">Require Extra Info!</p>
 
                         {% else %}
                         <!-- Direct enrollment if no extra fields -->
