added the similar question functionality all over except instructor side

--- a/templates/administration/practice/add_question.html
+++ b/templates/administration/practice/add_question.html
@@ -178,7 +178,9 @@ active
                                         <option value="Hard">Hard</option>
                                     </select>
 
-                                </div> <!-- ========== RECEMMONDED QUESTIONS SECTION ===========-->
+                                </div> 
+                                
+                                <!-- ========== RECEMMONDED QUESTIONS SECTION ===========-->
                                 <label>Recommended Questions <small>(optional)</small></label>
                                 <div id="recommended-questions-container">
 
